Removed Deprecated AggressiveOpt JVM Arg
Also removed UseFastAccessorMethods after causing some issues.